--- a/resta.html
+++ b/resta.html
@@ -149,7 +149,8 @@
 
   <div class="header"><img src="logo1.jpg" style="padding-top: 10px; padding-bottom: 10px; padding-left: 10px;"><input
       type="text" placeholder="Search.."
-      style="width:800px; margin: 95px 50px 20px 50px; float:right; padding: 10px 10px 10px 10px; border-radius: 8px;">
+      style="width:800px; margin: 95px 150px 20px 50px; float:right; padding: 10px 10px 10px 10px; border-radius: 8px;">
+    <img src="cart.png" style="height: 50px; width: 50px; float: right; margin: -70px 30px 20px 500px;">
   </div>
   <div class="nav">
     <ul>
