--- a/resta.html
+++ b/resta.html
@@ -142,16 +142,111 @@
       background-color: goldenrod;
       color: black;
       text-decoration: underline;
+    }
+
+    .modal {
+      display: none;
+      /* Hidden by default */
+      position: fixed;
+      /* Stay in place */
+      z-index: 1;
+      /* Sit on top */
+      padding-top: 100px;
+      /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%;
+      /* Full width */
+      height: 100%;
+      /* Full height */
+      overflow: auto;
+      /* Enable scroll if needed */
+      background-color: rgb(0, 0, 0);
+      /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.4);
+      /* Black w/ opacity */
+    }
+
+    /* Modal Content */
+    .modal-content {
+      position: relative;
+      background-color: #fefefe;
+      margin: auto;
+      padding: 0;
+      border: 1px solid #888;
+      width: 80%;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      -webkit-animation-name: animatetop;
+      -webkit-animation-duration: 0.4s;
+      animation-name: animatetop;
+      animation-duration: 0.4s
+    }
+
+    /* Add Animation */
+    @-webkit-keyframes animatetop {
+      from {
+        top: -300px;
+        opacity: 0
+      }
+
+      to {
+        top: 0;
+        opacity: 1
+      }
+    }
+
+    @keyframes animatetop {
+      from {
+        top: -300px;
+        opacity: 0
+      }
+
+      to {
+        top: 0;
+        opacity: 1
+      }
+    }
+
+
+    .close {
+      color: white;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .modal-header {
+      padding: 2px 16px;
+      background-color: #5cb85c;
+      color: white;
+    }
+
+    .modal-body {
+      padding: 2px 16px;
+    }
   </style>
+
 </head>
 
 <body>
 
   <div class="header"><img src="logo1.jpg" style="padding-top: 10px; padding-bottom: 10px; padding-left: 10px;"><input
       type="text" placeholder="Search.."
-      style="width:800px; margin: 95px 150px 20px 50px; float:right; padding: 10px 10px 10px 10px; border-radius: 8px;">
-    <img src="cart.png" style="height: 50px; width: 50px; float: right; margin: -70px 30px 20px 500px;">
+      style="width:800px; margin: 95px 150px 20px -50px; float:right; padding: 10px 10px 10px 10px; border-radius: 8px;">
+
+    <input type="image" id="myBtn" src="cart.png"
+      style="height: 50px; width: 50px; float: right; margin: -70px 30px 20px 500px;">
+    <button id="myBtn" style="height: 50px; width: 50px; float: right; margin: -70px 30px 20px 500px;"><img
+        src="cart.png" /></button>
   </div>
+
   <div class="nav">
     <ul>
       <li><a href="#Home">Home</a></li>
@@ -160,6 +255,47 @@
       <li><a href="">My Account</a></li>
     </ul>
   </div>
+  <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <h2>Modal Header</h2>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the Modal Body</p>
+        <p>Some other text...</p>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript">
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal 
+    btn.onclick = function () {
+      modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+
+  </script>
 
   <div class="clearfix">
     <div class="box" style="background-color: #bbb">
@@ -172,7 +308,7 @@
           decadent Brownie and heavenly Vanilla ice cream. </p>
         <div class="fl">
           <p style=" width:50%; float:left;"><b>&#x20b9; 200/-</b></p>
-          <input type="button" class="button" name="Add" value="Add" />
+          <input type="button" onclick="myFunction()" class="button" id="demo" name="Add" value="Add" />
         </div>
       </div>
     </div>
